--- a/Assignment Registration form/Assignment Registration form.csproj
+++ b/Assignment Registration form/Assignment Registration form.csproj
@@ -70,6 +70,7 @@
     <Content Include="login.aspx" />
     <Content Include="Page2.aspx" />
     <Content Include="Regform.aspx" />
+    <Content Include="Testpage.aspx" />
     <Content Include="Viewuserprofile.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -95,6 +96,13 @@
     </Compile>
     <Compile Include="Regform.aspx.designer.cs">
       <DependentUpon>Regform.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Testpage.aspx.cs">
+      <DependentUpon>Testpage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Testpage.aspx.designer.cs">
+      <DependentUpon>Testpage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Viewuserprofile.aspx.cs">
       <DependentUpon>Viewuserprofile.aspx</DependentUpon>
